--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+/* .toast-container {
+  background-color: black !important;
+  color: white !important;
+} */
 .toast-container {
-  background-color: black !important; /* Black background */
-  color: white !important; /* White text */
+  background-color: linear-gradient(45deg, red, black) !important;
+  color: white !important;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 /* body {
